# discord-sender

./: .gitignore  README.md  build.bat  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml  python-test.yml
discord_sender/: __init__.py  __main__.py  channel.py  discord.py  discord_exceptions.py  info.py  messages.py  other.py  tools.py
discord_sender/tests/: test_all.py
html/: index.html
html/discord_sender/: __init__.py.html  __main__.py.html  channel.py.html  discord.py.html  info.py.html  messages.py.html  other.py.html  tools.py.html
tests/: test_all.py
