[tool.poetry]
name = "discord-sender"
version = "2.0.3"
description = "A discord module that lets you send messages as a user"
authors = ["Jacob <112590190+Jacoblightning@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/Jacoblightning/discord-sender"
repository = "https://github.com/Jacoblightning/discord-sender"
documentation = "https://github.com/Jacoblightning/discord-sender/blob/main/README.md"
keywords = ["bot", "discord", "discordbot", "user-bot"]

[tool.poetry.dependencies]
python = ">=3.10"
requests = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
types-requests = "*"
pytest = "*"
coverage = "^7.4.1"
mutmut = "^2.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
